force-app/main/default/objects/Class__c/fields/Class_Objective__c.field-meta.xml
<CustomField>
    <fullName>Class_Objective__c</fullName>
    <label>Class Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Programing</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>