force-app/main/default/objects/Class__c/fields/Class_Site__c.field-meta.xml
<CustomField>
    <fullName>Class_Site__c</fullName>
    <label>Class Site</label>
    <type>Url</type>
</CustomField>