force-app/main/default/objects/Class__c/fields/Teachers_phone__c.field-meta.xml
<CustomField>
    <fullName>Teachers_phone__c</fullName>
    <label>Teachers phone</label>
    <type>Phone</type>
</CustomField>